--- a/index.html
+++ b/index.html
@@ -25,16 +25,34 @@
         </div>
 
         <div id="search-bar">
-            <input type="text" style="width: 95%;">
+            <input type="text" style="width: 90%;"> <img src="https://www.google.com/tia/tia.png" alt="" srcset="">
         </div>
 
         <div id="search-buttons">
-            search-buttons
+            <input type="button" value="Szukaj w Google">
+            <input type="button" value="Szczęśliwy traf">
         </div>
     </main>
 
     <footer>
-        Footer
+        <div class="fbar">
+            Polska
+        </div>
+
+        <div class="fbar">
+            <div class="left">
+                <a href="">Reklamuj się</a>
+                <a href="">Dla firm</a>
+                <a href="">O nas</a>
+                <a href="">Jak działa wyszukiwarka</a>
+            </div>
+            
+            <div class="right">
+                <a href="">Prywatność</a>
+                <a href="">Warunki</a>
+                <a href="">Ustawienia</a>
+            </div>
+        </div>
     </footer>
     
     <script src="javascript/main.js"></script>
