--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div id="search-bar">
-            <input type="text" style="width: 90%;"> <img src="https://www.google.com/tia/tia.png" alt="" srcset="">
+            <input id="search-field" type="text" style="width: 90%;"> <img src="https://www.google.com/tia/tia.png" alt="" srcset="">
         </div>
 
         <div id="search-buttons">
